data/derived/comb/progs/unify/prog0144.ml.out
Characters 21-49:
  let _ = stringOfList (stringOfList string_of_int) [[1;2;3];[4;5];[6];[]];;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int -> string list -> string
       but an expression was expected of type int -> string
       Type string list -> string is not compatible with type string 
